--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h1>Welcome to my new website</h1>
 		<hr>
 		<p>This is just a test</p>
+		<a href="form.html">Contact me!!</a>
 	</body>
 </html>
 
