--- a/form.html
+++ b/form.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        span {
-            color: red ;
-        }
-        p {
-            color: grey;
-            font-style: italic;
-            font-size: small;
-        }
-        body {
-            background-color: antiquewhite;
-        }
-    </style>
     <head>
         <title>Formulaire de contact</title>
+        <link rel="stylesheet" href="files/css/form.css">
     </head>
     <body>
         <h1>Contacter-nous</h1>
