--- a/form.html
+++ b/form.html
@@ -5,16 +5,16 @@
         <link rel="stylesheet" href="files/css/form.css">
     </head>
     <body>
-        <h1>Contacter-nous</h1>
+        <h1>Contact</h1>
         <hr>
         <form name="test-form" netlify>
-            Nom et prénom<span>*</span> <br><input type="text" name="full_name" required><br>
-            Adress e-mail<span>*</span> <br><input type="email" name="e-mail" required><br>
-            Numéro de telephone <br><input type="tel" name="num_tele"><br>
-            Sujet<span>*</span> <br><input type="text" name="subject" required><br>
+            Full name<span>*</span> <br><input type="text" name="full_name" required><br>
+            e-mail<span>*</span> <br><input type="email" name="e-mail" required><br>
+            Number<br><input type="tel" name="num_tele"><br>
+            Subject<span>*</span> <br><input type="text" name="subject" required><br>
             Message<span>*</span> <br><textarea rows = "5" cols = "50" name = "message" required></textarea><br>
-            <p>Les champs avec <span>*</span> son obligatoires</p>
-            <button value="Submit">Envoyer</button>
+            <p>Fields with a <span>*</span> are required</p>
+            <button value="Submit">Submit</button>
         </form>
     </body>
 </html>
