--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 	<head>
 		<title>My project</title>
-		<style>
-			h1{
-				color: red;
-			}
-		</style>
+		<link rel="stylesheet" href="files/css/index.css">
 	</head>
 	<body>
-		<h1>Welcome to my new website</h1>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="form.html">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+		</ul>
 		<hr>
-		<p>This is just a test</p>
-		<a href="form.html">Contact me!!</a>
+		<h1>Welcome to my new website</h1>
 	</body>
 </html>
 
