--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Formulaire de contact</title>
+        <title>Contact</title>
         <link rel="stylesheet" href="files/css/form.css">
     </head>
     <body>
