--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>About</title>
@@ -8,8 +8,8 @@
         <h1>About</h1>
 		<hr>
 		<h1>Why did I make this website</h1>
-        <p>I'm testing how to make a basic website with some styling, if you want for me to make you a website, go to the contact section!</p>
+        <p>I'm testing how to make a basic website with some styling, if you want for me to make you a website, go to the contact section.</p>
         <br>
-        <p>Alternatively you can click this <a href="form.html">link</a></p>
+        <p>Alternatively you can click this <a href="form.html">link!</a></p>
 	</body>
 </html>
