--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="index.html">Home</a></li>
+			<li><a href="index.html" class="active">Home</a></li>
 			<li><a href="form.html">Contact</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
