--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@
 		<link rel="stylesheet" href="files/css/about.css">
 	</head>
 	<body>
+		<ul>
+			<li><a href="index.html" class="active">Home</a></li>
+			<li><a href="form.html">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+		</ul>
+		<br>
+		<br>
+		<hr>
         <h1>About</h1>
 		<hr>
 		<h1>Why did I make this website</h1>
