--- a/form.html
+++ b/form.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" href="files/css/form.css">
     </head>
     <body>
+		<ul>
+			<li><a href="index.html" class="active">Home</a></li>
+			<li><a href="form.html">Contact</a></li>
+			<li><a href="about.html">About</a></li>
+		</ul>
+		<br>
+		<br>
+		<hr>
         <h1>Contact</h1>
         <hr>
         <form name="test-form" netlify>
