--- a/about.html
+++ b/about.html
@@ -6,9 +6,9 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="form.html">Contact</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a class="nav" href="index.html">Home</a></li>
+			<li><a class="nav" href="form.html">Contact</a></li>
+			<li><a class="nav" href="about.html" class="active">About</a></li>
 		</ul>
 		<br>
 		<br>
