--- a/form.html
+++ b/form.html
@@ -6,8 +6,8 @@
     </head>
     <body>
 		<ul>
-			<li><a href="index.html" class="active">Home</a></li>
-			<li><a href="form.html">Contact</a></li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="form.html" class="active">Contact</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
 		<br>
