--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<ul>
 			<li><a class="nav" href="index.html">Home</a></li>
 			<li><a class="nav" href="form.html">Contact</a></li>
-			<li><a class="nav" href="about.html" class="active">About</a></li>
+			<li><a href="about.html" class="active">About</a></li>
 		</ul>
 		<br>
 		<br>
