--- a/about.html
+++ b/about.html
@@ -13,9 +13,7 @@
 		<br>
 		<br>
 		<hr>
-        <h1>About</h1>
-		<hr>
-		<h1>Why did I make this website</h1>
+		<h1>Why I made this website</h1>
         <p>I'm testing how to make a basic website with some styling, if you want for me to make you a website, go to the contact section.</p>
         <br>
         <p>Alternatively you can click this <a href="form.html">link!</a></p>
