--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
 		<br>
 		<br>
 		<hr>
-        <h1>Contact</h1>
+        <h1>Contact me</h1>
         <hr>
         <form name="test-form" netlify>
             Full name<span>*</span> <br><input type="text" name="full_name" required><br>
