--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<br>
 		<hr>
 		<h1>Welcome to my new website</h1>
+		<img src="files/images/WHAT-IS-WEB-DESIGN.png" alt="webdev">
 	</body>
 </html>
 
