--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<br>
 		<hr>
 		<h1>Welcome to my new website</h1>
-		<img src="files/images/WHAT-IS-WEB-DESIGN.png" alt="webdev">
+		<img src="files/images/WHAT-IS-WEB-DESIGN.png" alt="webdev" width="100%" height="100%">
 	</body>
 </html>
 
