--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>About</title>
-		<link rel="stylesheet" href="files/css/about.css">
+		<link rel="stylesheet" href="">
 	</head>
 	<body>
 		<ul>
 			<li><a class="nav" href="index.html">Home</a></li>
-			<li><a class="nav" href="form.html">Contact</a></li>
+			<li><a class="nav" href="contactform.html">Contact</a></li>
 			<li><a href="about.html" class="active">About</a></li>
 		</ul>
 		<br>
