--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Mohamed El Haddati</h1>
-						<p>Web Developper &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Artist</p>
+						<p>Web Developper &nbsp;&bull;&nbsp; Graphics Designer &nbsp;&bull;&nbsp; Mobile Apps Developper</p>
 						<nav>
 							<ul>
 								<li><a href="https://www.youtube.com/channel/UC1dJyZRPbbyEP2ykYtRhPhg" class="icon brands fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
 								<li><a href="https://www.paypal.com/paypalme/Mou518/10" class="icon brands fa-paypal" target="_blank"><span class="label">Paypal</span></a></li>
 								<li><a href="https://steamcommunity.com/id/Fester_HD" class="icon brands fa-steam" target="_blank"><span class="label">Steam</span></a></li>
 								<li><a href="https://github.com/Festerr" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-								<li><a href="newform.html" class="icon solid fa-envelope"><span class="label" target="_blank">Contact</span></a></li>
+								<li><a href="contactform.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
 							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; Untitled.</span>
+						<span class="copyright">El Haddati &copy;2023</span>
 					</footer>
 
 			</div>
