added phone number

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<ul>
 								<li><a href="https://www.youtube.com/channel/UC1dJyZRPbbyEP2ykYtRhPhg" class="icon brands fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
 								<li><a href="https://www.paypal.com/paypalme/Mou518/10" class="icon brands fa-paypal" target="_blank"><span class="label">Paypal</span></a></li>
-								<li><a href="https://steamcommunity.com/id/Fester_HD" class="icon brands fa-steam" target="_blank"><span class="label">Steam</span></a></li>
+								<li><a href="tel:+212603152915" class="icon brands fa-whatsapp" target="_blank"><span class="label">Steam</span></a></li>
 								<li><a href="https://github.com/Festerr" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="contactform.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
 							</ul>
