--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<p>Web Developper &nbsp;&bull;&nbsp; Graphics Designer &nbsp;&bull;&nbsp; Mobile Apps Developper</p>
 						<nav>
 							<ul>
-								<li><a href="tel:+212603152915" class="icon brands fa-whatsapp" target="_blank"><span class="label">Number</span></a></li>
+								<li><a href="tel:0603152915" class="icon brands fa-whatsapp" target="_blank"><span class="label">Number</span></a></li>
 								<li><a href="https://www.paypal.com/paypalme/Mou518/" class="icon brands fa-paypal" target="_blank"><span class="label">Paypal</span></a></li>
 								<li><a href="https://www.youtube.com/channel/UC1dJyZRPbbyEP2ykYtRhPhg" class="icon brands fa-youtube" target="_blank"><span class="label">Youtube</span></a></li>
 								<li><a href="https://github.com/Festerr" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
