--- a/contact/index.html
+++ b/contact/index.html
@@ -4,9 +4,9 @@
 		<title>Contact Form</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/x-icon" href="assets/icon2.jpg">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="icon" type="image/x-icon" href="../assets/icon2.jpg">
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
@@ -14,7 +14,7 @@
 			<div id="overlay"></div>
 			<div id="main">
                 <header id="header">
-					<a style="display: flex; align-items: start;" href="index.html" class="icon solid fa-reply " id="back"><span class="label">Contact</span></a>
+					<a style="display: flex; align-items: start;" href="../index.html" class="icon solid fa-reply " id="back"><span class="label">Contact</span></a>
                     <h1 id="contact">Contact me</h1>
 					<br>	
                     <form name="test-form" netlify>
