--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/x-icon" href="assets/icon1.png">
+		<link rel="shortcut icon" href="assets/icon1.png" type="image/x-icon">
+		<link rel="icon" href="assets/icon1.png" type="image/x-icon">
 		<meta name="description" content="Mohamed El Haddati">
 		<meta name="keywords" content="HTML, CSS, JavaScript, Mohamed El Haddati">
 		<meta name="author" content="Mohamed El Haddati">
@@ -26,7 +27,7 @@
 								<li><a href="tel:0603152915" class="icon brands fa-whatsapp" target="_blank"><span class="label">Number</span></a></li>
 								<li><a href="https://www.paypal.com/paypalme/Mou518/" class="icon brands fa-paypal" target="_blank"><span class="label">Paypal</span></a></li>
 								<li><a href="https://github.com/Festerr" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-								<li><a href="contactform.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
+								<li><a href="contact/index.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
 							</ul>
 						</nav>
 					</header>
