--- a/contact/index.html
+++ b/contact/index.html
@@ -14,7 +14,7 @@
 			<div id="overlay"></div>
 			<div id="main">
                 <header id="header">
-					<a style="display: flex; align-items: start;" href="../index.html" class="icon solid fa-reply " id="back"><span class="label">Contact</span></a>
+					<a style="display: flex; align-items: start;" href="../" class="icon solid fa-reply " id="back"><span class="label">Contact</span></a>
                     <h1 id="contact">Contact me</h1>
 					<br>	
                     <form name="test-form" netlify>
