--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<li><a href="tel:0603152915" class="icon brands fa-whatsapp" target="_blank"><span class="label">Number</span></a></li>
 								<li><a href="https://www.paypal.com/paypalme/Mou518/" class="icon brands fa-paypal" target="_blank"><span class="label">Paypal</span></a></li>
 								<li><a href="https://github.com/Festerr" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-								<li><a href="contact/index.html" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
+								<li><a href="contact" class="icon solid fa-envelope"><span class="label">Contact</span></a></li>
 							</ul>
 						</nav>
 					</header>
