--- a/contact/index.html
+++ b/contact/index.html
@@ -23,7 +23,7 @@
                         Number<br><input type="tel" name="num_tele"><br>
                         Subject<span>*</span> <br><input type="text" name="subject" required><br>
                         Message<span>*</span> <br><textarea rows = "5" cols = "50" name = "message" id="textarea" required></textarea><br>
-                        <p>Fields with a <span>*</span> are required</p>
+                        <p id="italic">Fields with a <span>*</span> are required</p>
                         <button value="Submit" type="button" class="icon solid fa-envelope">Submit</button>
                     </form>
                 </header>
